Tables overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,9 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
-/* *{
+/* 
+*{
   border: solid red;
+
 } */
 
 html {
